[package]
name = "sui-gas-station"
version = "0.4.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/sui-gas-station"

[dependencies]
#sui-config = { path = "../sui-upstream/crates/sui-config" }
#sui-json-rpc-types = { path = "../sui-upstream/crates/sui-json-rpc-types" }
#sui-sdk = { path = "../sui-upstream/crates/sui-sdk" }
#sui-swarm-config = { path = "../sui-upstream/crates/sui-swarm-config" }
#sui-types = { path = "../sui-upstream/crates/sui-types" }
#shared-crypto = { path = "../sui-upstream/crates/shared-crypto" }
#telemetry-subscribers = { path = "../sui-upstream/crates/telemetry-subscribers" }
#test-cluster = { path = "../sui-upstream/crates/test-cluster" }
#typed-store = { path = "../sui-upstream/crates/typed-store" }
#typed-store-derive = { path = "../sui-upstream/crates/typed-store-derive" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "878492bd2541dce1491791bcadf3cc855ddcdc05" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "mysten-metrics" }
sui-config = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "sui-config" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "sui-json-rpc-types" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "sui-types" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "shared-crypto" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "telemetry-subscribers" }

anyhow = "1.0.75"
async-trait = "0.1.51"
axum = "0.6.6"
bcs = "0.1.6"
clap = "4.4.10"
chrono = "0.4.19"
const-str = "0.5.6"
eyre = "0.6.9"
futures-util = "0.3.30"
git-version = "0.3.9"
itertools = "0.12.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
prometheus = "0.13.3"
rand = "0.8.5"
redis = { version = "0.24.0", features = ["default", "async-std-comp", "connection-manager"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_with = "3.4.0"
schemars = "0.8.16"
tap = "1.0.1"
tempfile = "3.2.0"
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry = "0.3.0"
serde_json = "1.0.108"

[dev-dependencies]
rand = "0.8.5"

sui-swarm-config = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "sui-swarm-config" }
test-cluster = { git = "https://github.com/MystenLabs/sui", rev = "03f05ddbc7ad27c3ae3640c792781987e7ff1b8f", package = "test-cluster" }

[profile.release]
panic = "abort"

