[package]
name = "sui-gas-station"
version = "0.4.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/sui-gas-station"

[dependencies]
#sui-config = { path = "../sui-upstream/crates/sui-config" }
#sui-json-rpc-types = { path = "../sui-upstream/crates/sui-json-rpc-types" }
#sui-sdk = { path = "../sui-upstream/crates/sui-sdk" }
#sui-swarm-config = { path = "../sui-upstream/crates/sui-swarm-config" }
#sui-types = { path = "../sui-upstream/crates/sui-types" }
#shared-crypto = { path = "../sui-upstream/crates/shared-crypto" }
#telemetry-subscribers = { path = "../sui-upstream/crates/telemetry-subscribers" }
#test-cluster = { path = "../sui-upstream/crates/test-cluster" }
#typed-store = { path = "../sui-upstream/crates/typed-store" }
#typed-store-derive = { path = "../sui-upstream/crates/typed-store-derive" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", branch = "main" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "mysten-metrics" }
sui-config = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "sui-config" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "sui-json-rpc-types" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "sui-types" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "shared-crypto" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "telemetry-subscribers" }

anyhow = "1.0.75"
async-trait = "0.1.51"
axum = { version = "0.6.6", features = ["headers"] }
bcs = "0.1.6"
clap = "4.4.10"
chrono = "0.4.19"
const-str = "0.5.6"
eyre = "0.6.9"
futures-util = "0.3.30"
git-version = "0.3.9"
itertools = "0.12.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
prometheus = "0.13.3"
rand = "0.8.5"
redis = { version = "0.24.0", features = ["default", "async-std-comp", "connection-manager"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_with = "3.4.0"
schemars = "0.8.16"
tap = "1.0.1"
tempfile = "3.2.0"
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry = "0.3.0"
serde_json = "1.0.108"
tokio-util = "0.7.10"

[dev-dependencies]
rand = "0.8.5"

sui-swarm-config = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "sui-swarm-config" }
test-cluster = { git = "https://github.com/MystenLabs/sui", branch = "testnet", package = "test-cluster" }

[profile.release]
panic = "abort"

